made changes for beta3 branch for publishing to gh-pages

--- a/suma-site.yml
+++ b/suma-site.yml
@@ -9,13 +9,13 @@ asciidoc:
 
     # Included products and versions
     productname: 'SUSE Manager'
-    productnumber: '4.0'
-    docversion: '4.0'
+    productnumber: 'beta3'
+    docversion: 'beta3'
     saltversion: 2019.2.0
     sles-version: 15
     sp-version: SP1
     sp-version-l: sp1
-    smrproductnumber: 4.0
+    smrproductnumber: 'beta3'
 
     # Asciidoc Configuration Attributes
     linkattrs: true
@@ -91,7 +91,7 @@ content:
 
     # To build locally ensure you have your current local branch listed. For multiple branches use the format ['beta1', 'develop', '4.0']
     branches:
-    - 'master'
+    - 'beta3'
 
 # Which default UI bundle do we want to use "suma", "suma-draft or "corporate"? Available versions can be found in the supplemental-ui folder.
 ui:
