--- a/uyuni-site.yml
+++ b/uyuni-site.yml
@@ -39,6 +39,7 @@ asciidoc:
     rhnminrelease6: 'Red Hat Enterprise Linux Server 6'
     rhnminrelease7: 'Red Hat Enterprise Linux Server 7'
     ubuntu: Ubuntu
+    opensuse: openSUSE
     kickstart: Kickstart
     susemgr: 'SUSE Manager'
     productproxy: '{productname} Proxy'
