--- a/suma-site.yml
+++ b/suma-site.yml
@@ -28,8 +28,9 @@ asciidoc:
 
     # SUSE Manager/Uyuni Entities
     grub: Grub
-    zseries: 'z Systems'
-    zsystems: '{zseries}'
+    ibmz: IBM Z
+    zsystems: ibmz
+    zseries: ibmz
     ppc: POWER
     ppc64le: 'IBM Power PC'
     ipf: Itanium
@@ -92,7 +93,7 @@ content:
 
     # To build locally ensure you have your current local branch listed. For multiple branches use the format ['beta1', 'develop', '4.0']
     branches:
-    - 'xref-testing-jcayouette'
+    - 'master'
 
 # Which default UI bundle do we want to use "suma", "suma-draft or "corporate"? Available versions can be found in the supplemental-ui folder.
 ui:
