--- a/uyuni-site.yml
+++ b/uyuni-site.yml
@@ -28,8 +28,9 @@ asciidoc:
 
     # SUSE Manager/Uyuni Entities
     grub: Grub
-    zseries: 'z Systems'
-    zsystems: '{zseries}'
+    ibmz: IBM Z
+    zsystems: ibmz
+    zseries: ibmz
     ppc: POWER
     ppc64le: 'IBM Power PC'
     ipf: Itanium
