updated admin and audit xrefs - done - verified outputs

--- a/suma-site.yml
+++ b/suma-site.yml
@@ -93,7 +93,7 @@ content:
 
     # To build locally ensure you have your current local branch listed. For multiple branches use the format ['beta1', 'develop', '4.0']
     branches:
-    - 'master'
+    - 'xref-the-dream-continues'
 
 # Which default UI bundle do we want to use "suma", "suma-draft or "corporate"? Available versions can be found in the supplemental-ui folder.
 ui:
