Updated Power per Joe's feedback in bug. Actually committed entities.

--- a/suma-site.yml
+++ b/suma-site.yml
@@ -28,8 +28,9 @@ asciidoc:
 
     # SUSE Manager/Uyuni Entities
     grub: Grub
-    zseries: 'z Systems'
-    zsystems: '{zseries}'
+    zseries: '{ibmz}'
+    zsystems: '{ibmz}'
+    ibmz: IBM Z
     ppc: POWER
     ppc64le: 'IBM Power PC'
     ipf: Itanium
@@ -92,7 +93,7 @@ content:
 
     # To build locally ensure you have your current local branch listed. For multiple branches use the format ['beta1', 'develop', '4.0']
     branches:
-    - 'xref-testing-jcayouette'
+    - 'bz1087841-lbrindley'
 
 # Which default UI bundle do we want to use "suma", "suma-draft or "corporate"? Available versions can be found in the supplemental-ui folder.
 ui:
