updated makefile, antora and uyuni-site for building

--- a/uyuni-site.yml
+++ b/uyuni-site.yml
@@ -85,10 +85,10 @@ asciidoc:
 content:
   sources:
   # Uncomment to build from your local git clone
-  - url: .
+  #- url: .
 
   # Uncomment to build from the remote github repository.
-  #- url: https://github.com/SUSE/doc-susemanager.git
+  - url: https://github.com/SUSE/doc-susemanager.git
 
     # To build locally ensure you have your current local branch listed. For multiple branches use the format ['beta1', 'develop', '3.2']
     branches:
