--- a/uyuni-site.yml
+++ b/uyuni-site.yml
@@ -97,7 +97,7 @@ content:
 # Which default UI bundle do we want to use "uyuni", "uyuni-draft"? Available versions can be found in the supplemental-ui folder.
 ui:
   bundle:
-    url: ./branding/themes/suma-product-ui.zip
+    url: https://gitlab.com/jcayouette2/antora-ui-default/-/jobs/artifacts/master/raw/build/ui-bundle.zip?job=bundle-stable
     snapshot: true
   supplemental_files: ./branding/supplemental-ui/uyuni
 output:
