--- a/antora.yml
+++ b/antora.yml
@@ -7,7 +7,7 @@ title: SUSE Manager
 #title: Uyuni
 
 # Which branch is the default for this playbook.
-version: master
+version: bz1087841-lbrindley
 
 # Uncomment one of the following home pages depending on your target (SUMA or Uyuni)
 start_page: ROOT:index-suma
