--- a/suma-site.yml
+++ b/suma-site.yml
@@ -86,14 +86,14 @@ content:
   sources:
 
   # Uncomment to build from your local git clone
-  - url: .
+  #- url: .
 
   # Uncomment to build from the remote github repository.
-  #- url: https://github.com/SUSE/doc-susemanager.git
+  - url: https://github.com/SUSE/doc-susemanager.git
 
     # To build locally ensure you have your current local branch listed. For multiple branches use the format ['beta1', 'develop', '4.0']
     branches:
-    - 'master'
+    - 'bz1087841-lbrindley'
 
 # Which default UI bundle do we want to use "suma", "suma-draft or "corporate"? Available versions can be found in the supplemental-ui folder.
 ui:
