--- a/antora.yml
+++ b/antora.yml
@@ -10,7 +10,7 @@ title: SUSE Manager
 version: master
 
 # Uncomment one of the following home pages depending on your target (SUMA or Uyuni)
-#start_page: ROOT:index-suma
+start_page: ROOT:index-suma
 #start_page: ROOT:index-uyuni
 
 # Links to book navigation files. These nav files are used to build the left navigation sidebar in the form of asciidoctor lists.
