--- a/suma-site.yml
+++ b/suma-site.yml
@@ -91,9 +91,9 @@ content:
   # Uncomment to build from the remote github repository.
   - url: https://github.com/SUSE/doc-susemanager.git
 
-    # To build locally ensure you have your current local branch listed. For multiple branches use the format ['beta1', 'develop', '4.0']
+    # To build locally ensure you have your current local branch listed. For multiple branches use the format [beta1, beta2, beta3]
     branches:
-    - [4.0, beta1, beta2, beta3, master]
+    - [4.0, master]
 
 # Which default UI bundle do we want to use "suma", "suma-draft or "corporate"? Available versions can be found in the supplemental-ui folder.
 ui:
