--- a/suma-site.yml
+++ b/suma-site.yml
@@ -93,7 +93,8 @@ content:
 
     # To build locally ensure you have your current local branch listed. For multiple branches use the format [beta1, beta2, beta3]
     branches:
-    - [4.0, master]
+    - '4.0'
+    - master
 
 # Which default UI bundle do we want to use "suma", "suma-draft or "corporate"? Available versions can be found in the supplemental-ui folder.
 ui:
