--- a/suma-site.yml
+++ b/suma-site.yml
@@ -94,7 +94,10 @@ content:
     # To build locally ensure you have your current local branch listed. For multiple branches use the format [beta1, beta2, beta3]
     branches:
     - '4.0'
-    - master
+    - beta1
+    - beta2
+    - beta3
+    - rc1
 
 # Which default UI bundle do we want to use "suma", "suma-draft or "corporate"? Available versions can be found in the supplemental-ui folder.
 ui:
