--- a/suma-site.yml
+++ b/suma-site.yml
@@ -2,7 +2,7 @@
 site:
   title: SUSE Manager Documentation
   start_page: suse-manager::index-suma
-  url: https://opensource.suse.com/doc-susemanager
+  url: https://opensource.suse.com/doc-susemanager/index-suma.html
 
 asciidoc:
   attributes:
