commented out architecture until post release

--- a/antora.yml
+++ b/antora.yml
@@ -45,4 +45,4 @@ nav:
   - modules/retail/nav-retail.adoc
 
   # Architecture
-  - modules/architecture/nav-architecture-components-guide.adoc
+  #- modules/architecture/nav-architecture-components-guide.adoc
