removed draft watermark from pdfs

--- a/branding/pdf-resources/themes/suse-draft-theme.yml
+++ b/branding/pdf-resources/themes/suse-draft-theme.yml
@@ -77,7 +77,7 @@ brand:
     decoration2: #841781
 # Configure style and layout of normal pages
 page:
-  background_image: image:images/draft.jpg[]
+  #background_image: image:images/draft.jpg[]
   background_color: #ffffff
   layout: portrait
   margin: [20mm, 27mm, 27mm, 20mm]
