packaging update for gh-pages

--- a/suma-site.yml
+++ b/suma-site.yml
@@ -95,14 +95,16 @@ content:
     branches:
     - 'master'
 
-# Which default UI bundle do we want to use "suma", "suma-draft or "corporate"? Available versions can be found in the supplemental-ui folder.
+# Which default base theme to use? These base themes are located in branding/themes/
+# suma-susecom.zip (With Alolia search, suse.com branding theme)
+# suma-product-ui.zip (no search currently with webui color scheme)
 ui:
   bundle:
     # local git repo bundle for development
-    url: ./branding/themes/suma-susecom.zip
+    url: ./branding/themes/suma-gh-pages.zip
     snapshot: true
   # Adds search bar, and items specific to selected UI
-  supplemental_files: ./branding/supplemental-ui/suma-susecom
+  supplemental_files: ./branding/supplemental-ui/suma-github
 output:
   dir: ./build
 runtime:
