--- a/suma-site.yml
+++ b/suma-site.yml
@@ -94,7 +94,7 @@ content:
 
     # To build locally ensure you have your current local branch listed. For multiple branches use the format ['beta1', 'develop', '4.0']
     branches:
-    - 'master'
+    - 'adjust-xref-reference'
 
 ui:
   bundle:
