--- a/suma-site.yml
+++ b/suma-site.yml
@@ -3,7 +3,13 @@
 site:
   title: SUSE Manager Documentation
   start_page: suse-manager::index-suma
-  url: https://opensource.suse.com/doc-susemanager/index.html
+  url: https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager
+
+# site.url should be adjusted before building depending on the desired target the following selections are available
+# The site.url value is used to create the base url for the sitemap.xml file.
+# SUSE.com: https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager
+# Github Pages: https://opensource.suse.com/doc-susemanager
+# Product UI can be left blank.
 
 asciidoc:
   attributes:
