cleaned up comments

--- a/suma-site.yml
+++ b/suma-site.yml
@@ -5,8 +5,9 @@ site:
   start_page: suse-manager::index-suma
   url: https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager
 
-# site.url should be adjusted before building depending on the desired target the following selections are available
+# site.url should be adjusted before building depending on the desired target.
 # The site.url value is used to create the base url for the sitemap.xml file.
+# The following selections are available
 # SUSE.com: https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager
 # Github Pages: https://opensource.suse.com/doc-susemanager
 # Product UI can be left blank.
