adjusted suma-site.yml

--- a/suma-site.yml
+++ b/suma-site.yml
@@ -101,7 +101,7 @@ content:
 
     # To build locally ensure you have your current local branch listed. For multiple branches use the format ['beta1', 'develop', '4.0']
     branches:
-    - 'master'
+    - 'current'
 
 ui:
   bundle:
