--- a/suma-site.yml
+++ b/suma-site.yml
@@ -3,7 +3,7 @@
 site:
   title: SUSE Manager Documentation
   start_page: suse-manager::index-suma
-  url: https://opensource.suse.com/doc-susemanager
+  url: https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager
 
 # site.url should be adjusted before building depending on the desired target.
 # The site.url value is used to create the base url for the sitemap.xml file.
@@ -101,7 +101,7 @@ content:
 
     # To build locally ensure you have your current local branch listed. For multiple branches use the format ['beta1', 'develop', '4.0']
     branches:
-    - 'adjust-xref-reference'
+    - 'master'
 
 ui:
   bundle:
@@ -110,14 +110,14 @@ ui:
     # suma-product-ui.zip (no search currently with webui color scheme, for product webui)
     # suma-gh-pages.zip (With algolia search, and product branding)
     # local git repo bundle for development
-    url: ./branding/themes/suma-gh-pages.zip
+    url: ./branding/themes/suma-susecom.zip
     snapshot: true
 
   # Adds search bar, and items specific to selected UI
   # suma (product ui styles) "Use for publishing on obs".
   # suma-github (product ui styles for publishing to gh-pages) "The default gh-page theme".
   # suma-susecom (suse.com/documentation publishing styles) "default for publishing to susecom.
-  supplemental_files: ./branding/supplemental-ui/suma-github
+  supplemental_files: ./branding/supplemental-ui/suma-susecom
 output:
   dir: ./build
 runtime:
