--- a/suma-site.yml
+++ b/suma-site.yml
@@ -107,17 +107,18 @@ ui:
   bundle:
     # Which default base theme to use? These base themes are located in branding/themes/
     # suma-susecom.zip (With Alolia search, suse.com branding theme)
-    # suma-product-ui.zip (no search currently with webui color scheme, for product webui)
+    # suma-product-ui.zip (do not use for now. draft watermark no search currently with webui color scheme, for product webui)
+    # suma-product.zip (no search no draft watermark use for OBS)
     # suma-gh-pages.zip (With algolia search, and product branding)
     # local git repo bundle for development
-    url: ./branding/themes/suma-gh-pages.zip
+    url: ./branding/themes/suma-susecom.zip
     snapshot: true
 
   # Adds search bar, and items specific to selected UI
   # suma (product ui styles) "Use for publishing on obs".
   # suma-github (product ui styles for publishing to gh-pages) "The default gh-page theme".
   # suma-susecom (suse.com/documentation publishing styles) "default for publishing to susecom.
-  supplemental_files: ./branding/supplemental-ui/suma
+  supplemental_files: ./branding/supplemental-ui/suma-susecom
 output:
   dir: ./build
 runtime:
