--- a/extensions/toolchain-container/Dockerfile
+++ b/extensions/toolchain-container/Dockerfile
@@ -8,28 +8,28 @@ RUN /root/add_deps.sh
 # Install rbenv and ruby-build
 RUN git clone https://github.com/rbenv/rbenv.git /root/.rbenv
 RUN git clone https://github.com/rbenv/ruby-build.git /root/.rbenv/plugins/ruby-build
-RUN /root/.rbenv/plugins/ruby-build/install.sh
+RUN ./root/.rbenv/plugins/ruby-build/install.sh
 ENV PATH /root/.rbenv/bin:$PATH
-RUN echo 'eval "$(rbenv init -)"' >> /etc/profile.d/rbenv.sh # or /etc/profile
-RUN echo 'eval "$(rbenv init -)"' >> .bashrc
-RUN source /etc/profile.d/rbenv.sh
+RUN echo 'eval "$(rbenv init -)"' >> /root/.bashrc
+RUN echo 'export PATH="/root/.rbenv/bin:$PATH"' >> /root/.bashrc
+RUN echo 'eval "$(rbenv init -)"' >> /etc/profile
 
-# Install multiple versions of ruby
+# Install Ruby
 ENV CONFIGURE_OPTS --disable-install-doc
 ADD ./versions.txt /root/versions.txt
 RUN xargs -L 1 rbenv install < /root/versions.txt
-RUN gem update --system
 RUN rbenv global 2.6.3
 RUN echo $(ruby -v)
-
-
-# Add Ruby 2.6.3
-#ADD add_ruby.sh /root/add_ruby.sh
-#RUN /root/add_ruby.sh
+RUN gem install asciidoctor
+RUN gem install asciidoctor-pdf -v 1.5.0.alpha.18
 
 # Add NVM and NODE LTS
-#ADD add_nvm_node_lts.sh /root/add_nvm_node_lts.sh
-#RUN /root/add_nvm_node_lts.sh
+RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash
+RUN nvm install --lts
+RUN npm i -g yarn
+RUN yarn global add @antora/cli@2.0
+RUN yarn global add @antora/site-generator-default@2.0
+
 
 # Add the toolchain packages (Asciidoctor, Asciidoctor-pdf, antora)
 #ADD add_packages.sh /root/add_packages.sh
@@ -38,5 +38,5 @@ RUN echo $(ruby -v)
 WORKDIR /workspace
 
 # Add the build script
-ADD run.sh /root/run.sh
-CMD /root/run.sh
+#ADD run.sh /root/run.sh
+#CMD /root/run.sh
