update building comments in docker-compose.yml

--- a/extensions/toolchain-container/docker-compose.yml
+++ b/extensions/toolchain-container/docker-compose.yml
@@ -4,3 +4,8 @@ services:
     image: "asciidoctor/docker-asciidoctor"
   antora:
     image: "antora/antora:latest"
+
+# 1. to build our toolchain install docker and docker-compose
+# 2. sudo zypper in docker docker-compose
+# 3. Run docker-compose up in this directory.
+# 4. To build PDF or the Antora site go to root directory in this git repo and type make antora-suma
