fixed depreciated content

--- a/antora.yml
+++ b/antora.yml
@@ -3,15 +3,15 @@
 #title: SUSE Manager
 
 # Uncomment name and title to build for Uyuni
-#name: uyuni
-#title: Uyuni
+name: uyuni
+title: Uyuni
 
 # Which branch is the default for this playbook.
 version: master
 
 # Uncomment one of the following home pages depending on your target (SUMA or Uyuni)
 #start_page: ROOT:index-suma
-#start_page: ROOT:index-uyuni
+start_page: ROOT:index-uyuni
 
 # Links to book navigation files. These nav files are used to build the left navigation sidebar in the form of asciidoctor lists.
 # We also keep our PDF lists in these files. Which one is used depends on what backend is selected via our Makefile. If you select to build pdf
