--- a/suma-site.yml
+++ b/suma-site.yml
@@ -3,7 +3,7 @@
 site:
   title: SUSE Manager Documentation
   start_page: suse-manager::index-suma
-  #url: https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager
+  url: https://opensource.suse.com/doc-susemanager
 
 # site.url should be adjusted before building depending on the desired target.
 # The site.url value is used to create the base url for the sitemap.xml file.
@@ -12,7 +12,7 @@ site:
 # - SUSE.com: https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager
 # - Github Pages: https://opensource.suse.com/doc-susemanager
 # - Product UI can be left blank.
-#
+
 
 asciidoc:
   attributes:
@@ -96,19 +96,19 @@ content:
   sources:
 
   # Uncomment to build from your local git clone
-  - url: .
+  #- url: .
 
   # Uncomment to build from the remote github repository.
-  #- url: https://github.com/SUSE/doc-susemanager.git
+  - url: https://github.com/SUSE/doc-susemanager.git
 
-    # To build locally ensure you have your current local branch listed. For multiple branches use the format ['beta1', 'develop', '4.0']
+    # To build locally ensure you have your current local branch listed.
     branches:
     - 'master'
 
 ui:
   bundle:
-    # Which default base theme to use? These base default-ui are located in branding/default-ui/
-    # - suma-susecom.zip (With Alolia search, suse.com branding theme)
+    # Choose a default-ui to use
+    # - suma-susecom.zip (suse.com branding theme)
     # - suma-product-ui.zip (do not use for now. draft watermark no search currently with webui color scheme, for product webui)
     # - suma-product.zip (no search no draft watermark use for OBS)
     # - suma-gh-pages.zip (With algolia search, and product branding)
@@ -117,7 +117,7 @@ ui:
     url: ./branding/default-ui/suma/suma-product.zip
     snapshot: true
 
-  # The supplemental ui adds a search bar, and other items specific for the selected UI's endpoint
+  # Choose a UI for your publishing endpoint
   # - suma-webui (product ui on OBS)
   # - suma-github (for publishing to gh-pages)
   # - suma-susecom (suse.com/documentation publishing)
