--- a/uyuni-site.yml
+++ b/uyuni-site.yml
@@ -90,18 +90,20 @@ content:
   # Uncomment to build from the remote github repository.
   #- url: https://github.com/SUSE/doc-susemanager.git
 
-    # To build locally ensure you have your current local branch listed. For multiple branches use the format ['beta1', 'develop', '3.2']
+    # To build locally ensure you have your current local branch listed.
     branches:
     - 'add-bug-fixes-to-uyuni-build'
 
-# Which UI configs do we want to use on top of the uyuni-default UI? Versions available for use with Uyuni can be found in the ./branding/supplemental-ui/uyuni/
-# Select the correct output depending on your endpoint.
-# Temporarily using uyuni-depreciated theme until we update the landing page and switch to using the updated theme for docs.
-# We will remove the depreciated theme once we migrate
+    # Choose a default-ui to use
+    # - uyuni-default.zip (product branding theme OBS)
+    # - uyuni-primary.zip (do not use, will release with uyuni landing page)
 ui:
   bundle:
     url: ./branding/default-ui/uyuni/uyuni-default.zip
     snapshot: true
+
+    # - uyuni-depreciated (use for now)
+    # - uyuni-webui (for gh-pages and WebUI will release with uyuni landing page)
   supplemental_files: ./branding/supplemental-ui/uyuni/uyuni-depreciated
 output:
   dir: ./build
