--- a/uyuni-site.yml
+++ b/uyuni-site.yml
@@ -85,14 +85,14 @@ asciidoc:
 content:
   sources:
   # Uncomment to build from your local git clone
-  - url: .
+  #- url: .
 
   # Uncomment to build from the remote github repository.
-  #- url: https://github.com/SUSE/doc-susemanager.git
+  - url: https://github.com/SUSE/doc-susemanager.git
 
     # To build locally ensure you have your current local branch listed.
     branches:
-    - 'add-bug-fixes-to-uyuni-build'
+    - 'master'
 
     # Choose a default-ui to use
     # - uyuni-default.zip (product branding theme OBS)
