--- a/uyuni-site.yml
+++ b/uyuni-site.yml
@@ -2,7 +2,7 @@
 site:
   title: Uyuni Documentation
   start_page: uyuni::index-uyuni
-  url: https://www.uyuni-project.org/uyuni
+  url: https://www.uyuni-project.org/uyuni-docs
 
 asciidoc:
   attributes:
