--- a/suma-site.yml
+++ b/suma-site.yml
@@ -3,15 +3,14 @@
 site:
   title: SUSE Manager Documentation
   start_page: suse-manager::index-suma
-  url: https://opensource.suse.com/doc-susemanager
-
-# site.url should be adjusted before building depending on the desired target.
-# The site.url value is used to create the base url for the sitemap.xml file.
-#
-# The following selections are available
-# - SUSE.com: https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager
-# - Github Pages: https://opensource.suse.com/doc-susemanager
-# - Product UI can be left blank.
+  # site.url should be adjusted before building depending on the desired target.
+  # The site.url value is used to create the base url for the sitemap.xml file.
+  #
+  # The following selections are available
+  # - SUSE.com: https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager
+  # - Github Pages: https://opensource.suse.com/doc-susemanager
+  # - Product UI can be left blank.
+  url: https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager
 
 
 asciidoc:
@@ -96,10 +95,10 @@ content:
   sources:
 
   # Uncomment to build from your local git clone
-  - url: .
+  #- url: .
 
   # Uncomment to build from the remote github repository.
-  # - url: https://github.com/SUSE/doc-susemanager.git
+   - url: https://github.com/SUSE/doc-susemanager.git
 
     # To build locally ensure you have your current local branch listed.
     branches:
@@ -114,14 +113,14 @@ ui:
     # - suma-gh-pages.zip (With algolia search, and product branding)
 
     # local git repo bundle for development
-    url: ./branding/default-ui/suma/suma-product.zip
+    url: ./branding/default-ui/suma/suma-susecom.zip
     snapshot: true
 
   # Choose a UI for your publishing endpoint
   # - suma-webui (product ui on OBS)
   # - suma-github (for publishing to gh-pages)
   # - suma-susecom (suse.com/documentation publishing)
-  supplemental_files: ./branding/supplemental-ui/suma/suma-webui
+  supplemental_files: ./branding/supplemental-ui/suma/suma-susecom
 output:
   dir: ./build
 runtime:
