--- a/uyuni-site.yml
+++ b/uyuni-site.yml
@@ -25,6 +25,7 @@ asciidoc:
 
     # Enable or disable SUSE Manager conditional content (Not applicable to UYUNI - default is false)
     suma-content: false
+    uyuni-ubuntu: true
 
     # SUSE Manager/Uyuni Entities
     grub: Grub
