added uyuni-content attribute

--- a/suma-site.yml
+++ b/suma-site.yml
@@ -34,7 +34,7 @@ asciidoc:
 
     # Enable or disable SUSE Manager conditional content (Default is true)
     suma-content: true
-
+    uyuni-content: false
     # SUSE Manager/Uyuni Entities
     grub: Grub
     zseries: '{ibmz}'
