testing new docserv config at provo

--- a/suma-site.yml
+++ b/suma-site.yml
@@ -7,10 +7,12 @@ site:
   # The site.url value is used to create the base url for the sitemap.xml file.
   #
   # The following selections are available
-  # - SUSE.com: https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager
   # - Github Pages: https://opensource.suse.com/doc-susemanager
   # - Product UI can be left blank.
-  url: https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager
+  # - SUSE.com: https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager
+  # - (docteam) Docserv Development https://documentation.provo.novell.com/external-tree/en-us/suma/4.0/suse-manager
+  # - (docteam) Docserv Production https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager
+  url: https://documentation.provo.novell.com/external-tree/en-us/suma/4.0/suse-manager
 
 
 asciidoc:
