added sp-vert attribute for use in screen or code blocks

--- a/suma-site.yml
+++ b/suma-site.yml
@@ -24,7 +24,8 @@ asciidoc:
     docversion: '4.0'
     saltversion: 2019.2.0
     sles-version: 15
-    sp-version: SP1
+    sp-version: SP1 #use for normal text
+    sp-vert: sp1 #use for terminal block
     sp-version-l: sp1
     smrproductnumber: 4.0
 
@@ -84,7 +85,6 @@ asciidoc:
     openscap: OpenSCAP
     uarr:
     ncc: Novell Customer Center
-    sp-ver: '{sp-version}'
     rmtool: Repository Management Tool
     smtool: '{rmtool}'
     vmguest: VM Guest
@@ -97,10 +97,10 @@ content:
   sources:
 
   # Uncomment to build from your local git clone
-  #- url: .
+  - url: .
 
   # Uncomment to build from the remote github repository.
-  - url: https://github.com/SUSE/doc-susemanager.git
+  #- url: https://github.com/SUSE/doc-susemanager.git
 
     # To build locally ensure you have your current local branch listed.
     branches:
