--- a/uyuni-site.yml
+++ b/uyuni-site.yml
@@ -13,6 +13,7 @@ asciidoc:
     docversion: 4.0
     saltversion: 2019.2.0
     sles-version: 15
+    sp-vert: 0 #use for terminal block
     sp-version: 0
     sp-version-l: 0
     smrproductnumber: 4.0
@@ -75,7 +76,6 @@ asciidoc:
     openscap: OpenSCAP
     uarr:
     ncc: Novell Customer Center
-    sp-ver: '{sp-version}'
     rmtool: Repository Management Tool
     smtool: '{rmtool}'
     vmguest: VM Guest
