removed outdated entities includes at the top of several documents

--- a/suma-site.yml
+++ b/suma-site.yml
@@ -12,7 +12,7 @@ site:
   # - SUSE.com: https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager
   # - (docteam) Docserv Development https://documentation.provo.novell.com/external-tree/en-us/suma/4.0/suse-manager
   # - (docteam) Docserv Production https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager
-  url: https://documentation.provo.novell.com/external-tree/en-us/suma/4.0/suse-manager
+  url: https://opensource.suse.com/doc-susemanager
 
 
 asciidoc:
@@ -97,10 +97,10 @@ content:
   sources:
 
   # Uncomment to build from your local git clone
-  - url: .
+  #- url: .
 
   # Uncomment to build from the remote github repository.
-  #- url: https://github.com/SUSE/doc-susemanager.git
+  - url: https://github.com/SUSE/doc-susemanager.git
 
     # To build locally ensure you have your current local branch listed.
     branches:
@@ -115,14 +115,14 @@ ui:
     # - suma-gh-pages.zip (With algolia search, and product branding)
 
     # local git repo bundle for development
-    url: ./branding/default-ui/suma/suma-susecom.zip
+    url: ./branding/default-ui/suma/suma-gh-pages.zip
     snapshot: true
 
   # Choose a UI for your publishing endpoint
   # - suma-webui (product ui on OBS)
   # - suma-github (for publishing to gh-pages)
   # - suma-susecom (suse.com/documentation publishing)
-  supplemental_files: ./branding/supplemental-ui/suma/suma-susecom
+  supplemental_files: ./branding/supplemental-ui/suma/suma-github
 output:
   dir: ./build
 runtime:
