--- a/suma-site.yml
+++ b/suma-site.yml
@@ -9,7 +9,7 @@ site:
   # The following selections are available
   # - Github Pages: https://opensource.suse.com/doc-susemanager
   # - Product UI can be left blank.
-  # - SUSE.com: https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager
+  # - SUSE.com: https://www.suse.com/documentation/suse-manager-4/4.0/
   # - (docteam) Docserv Development https://documentation.provo.novell.com/external-tree/en-us/suma/4.0/suse-manager
   # - (docteam) Docserv Production https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager
   url: https://opensource.suse.com/doc-susemanager
@@ -122,7 +122,7 @@ ui:
   # - suma-webui (product ui on OBS)
   # - suma-github (for publishing to gh-pages)
   # - suma-susecom (suse.com/documentation publishing)
-  supplemental_files: ./branding/supplemental-ui/suma/suma-github
+  supplemental_files: ./branding/supplemental-ui/suma/susecom
 output:
   dir: ./build
 runtime:
