Add centos entity

--- a/uyuni-site.yml
+++ b/uyuni-site.yml
@@ -44,6 +44,7 @@ asciidoc:
     rhnminrelease7: 'Red Hat Enterprise Linux Server 7'
     ubuntu: Ubuntu
     opensuse: openSUSE
+    centos: CentOS
     kickstart: Kickstart
     susemgr: 'SUSE Manager'
     productproxy: '{productname} Proxy'
