--- a/suma-site.yml
+++ b/suma-site.yml
@@ -12,7 +12,7 @@ site:
   # - SUSE.com: https://www.suse.com/documentation/suse-manager-4/4.0/
   # - (docteam) Docserv Development https://documentation.provo.novell.com/external-tree/en-us/suma/4.0/suse-manager
   # - (docteam) Docserv Production https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager
-  url: https://opensource.suse.com/doc-susemanager/
+  url: https://www.suse.com/documentation/suse-manager-4/4.0/
 
 
 asciidoc:
@@ -120,9 +120,9 @@ ui:
 
   # Choose a UI for your publishing endpoint
   # - suma-webui (product ui on OBS)
-  # - suma-github (for publishing to gh-pages)
+  # - suma-ghpages (for publishing to gh-pages)
   # - suma-susecom (suse.com/documentation publishing)
-  supplemental_files: ./branding/supplemental-ui/suma/suma-ghpages
+  supplemental_files: ./branding/supplemental-ui/suma/susecom
 output:
   dir: ./build
 runtime:
