Fixed IBM Z entity render problem

--- a/suma-site.yml
+++ b/suma-site.yml
@@ -40,8 +40,8 @@ asciidoc:
     uyuni-content: false
     # SUSE Manager/Uyuni Entities
     grub: Grub
-    zseries: '{ibmz}'
-    zsystems: '{ibmz}'
+    zseries: IBM Z
+    zsystems: IBM Z
     ibmz: IBM Z
     ppc: POWER
     ppc64le: 'IBM Power PC'
