--- a/uyuni-site.yml
+++ b/uyuni-site.yml
@@ -32,8 +32,8 @@ asciidoc:
     # SUSE Manager/Uyuni Entities
     grub: Grub
     ibmz: IBM Z
-    zsystems: ibmz
-    zseries: ibmz
+    zsystems: IBM Z
+    zseries: IBM Z
     ppc: POWER
     ppc64le: 'IBM Power PC'
     ipf: Itanium
