--- a/suma-site.yml
+++ b/suma-site.yml
@@ -8,11 +8,11 @@ site:
   #
   # The following selections are available
   # - Github Pages: https://opensource.suse.com/doc-susemanager
-  # - Product UI can be left blank.
+  # - ProductUI http://localhost/docs/
   # - SUSE.com: https://www.suse.com/documentation/suse-manager-4/4.0/
   # - (docteam) Docserv Development https://documentation.provo.novell.com/external-tree/en-us/suma/4.0/suse-manager
   # - (docteam) Docserv Production https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager
-  url: https://www.suse.com/documentation/suse-manager-4/4.0/
+  url: https://opensource.suse.com/doc-susemanager/
 
 
 asciidoc:
@@ -121,7 +121,7 @@ ui:
   # Choose a UI for your publishing endpoint
   # - suma-webui (product ui on OBS)
   # - suma-ghpages (for publishing to gh-pages)
-  # - suma-susecom (suse.com/documentation publishing)
+  # - suma-susecom (suse.com/documentation publishing and docserv)
   supplemental_files: ./branding/supplemental-ui/suma/susecom
 output:
   dir: ./build
