updated branch in site.yml

--- a/suma-site.yml
+++ b/suma-site.yml
@@ -105,7 +105,7 @@ content:
 
     # To build locally ensure you have your current local branch listed.
     branches:
-    - 'install-guide-review'
+    - 'master'
 
 ui:
   bundle:
