fixed several nav list issues, and updated release notes for 4.0.2

--- a/suma-site.yml
+++ b/suma-site.yml
@@ -12,7 +12,7 @@ site:
   # - SUSE.com: https://www.suse.com/documentation/suse-manager-4/4.0/
   # - (docteam) Docserv Development https://documentation.provo.novell.com/external-tree/en-us/suma/4.0/suse-manager
   # - (docteam) Docserv Production https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager
-  url: https://opensource.suse.com/doc-susemanager/
+  #url: https://opensource.suse.com/doc-susemanager/
 
 
 asciidoc:
@@ -22,6 +22,7 @@ asciidoc:
     productname: 'SUSE Manager'
     productnumber: '4.0'
     docversion: '4.0'
+    minorversion402: '4.0.2'
     saltversion: 2019.2.0
     sles-version: 15
     sp-version: SP1 #use for normal text
@@ -98,10 +99,10 @@ content:
   sources:
 
   # Uncomment to build from your local git clone
-  - url: .
+  #- url: .
 
   # Uncomment to build from the remote github repository.
-  #- url: https://github.com/SUSE/doc-susemanager.git
+  - url: https://github.com/SUSE/doc-susemanager.git
 
     # To build locally ensure you have your current local branch listed.
     branches:
@@ -116,14 +117,14 @@ ui:
     # - suma-gh-pages.zip (With algolia search, and product branding)
 
     # local git repo bundle for development
-    url: ./branding/default-ui/suma/suma-susecom.zip
+    url: ./branding/default-ui/suma/suma-product.zip
     snapshot: true
 
   # Choose a UI for your publishing endpoint
   # - suma-webui (product ui on OBS)
   # - suma-ghpages (for publishing to gh-pages)
   # - suma-susecom (suse.com/documentation publishing and docserv)
-  supplemental_files: ./branding/supplemental-ui/suma/susecom
+  supplemental_files: ./branding/supplemental-ui/suma/suma-webui
 output:
   dir: ./build
 runtime:
