added new susecom branding bundle based on new default ui. added left tocbot, and next and previous button partials.

--- a/suma-site.yml
+++ b/suma-site.yml
@@ -12,7 +12,7 @@ site:
   # - SUSE.com: https://www.suse.com/documentation/suse-manager-4/4.0/
   # - (docteam) Docserv Development https://documentation.provo.novell.com/external-tree/en-us/suma/4.0/suse-manager
   # - (docteam) Docserv Production https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager
-  #url: https://opensource.suse.com/doc-susemanager/
+  url: https://opensource.suse.com/doc-susemanager/
 
 
 asciidoc:
@@ -99,10 +99,10 @@ content:
   sources:
 
   # Uncomment to build from your local git clone
-  #- url: .
+  - url: .
 
   # Uncomment to build from the remote github repository.
-  - url: https://github.com/SUSE/doc-susemanager.git
+  #- url: https://github.com/SUSE/doc-susemanager.git
 
     # To build locally ensure you have your current local branch listed.
     branches:
@@ -111,20 +111,21 @@ content:
 ui:
   bundle:
     # Choose a default-ui to use
-    # - suma-susecom.zip (suse.com branding theme)
+    # - suma-susecom.zip (current - suse.com branding theme)
     # - suma-product-ui.zip (do not use for now. draft watermark no search currently with webui color scheme, for product webui)
     # - suma-product.zip (no search no draft watermark use for OBS)
     # - suma-gh-pages.zip (With algolia search, and product branding)
+    # - latest-bundle.zip (latest bundle for susecom with side toc and previous/next buttons on pages)
 
     # local git repo bundle for development
-    url: ./branding/default-ui/suma/suma-product.zip
+    url: ./branding/default-ui/suma/latest-bundle.zip
     snapshot: true
 
   # Choose a UI for your publishing endpoint
   # - suma-webui (product ui on OBS)
   # - suma-ghpages (for publishing to gh-pages)
   # - suma-susecom (suse.com/documentation publishing and docserv)
-  supplemental_files: ./branding/supplemental-ui/suma/suma-webui
+  supplemental_files: ./branding/supplemental-ui/suma/susecom
 output:
   dir: ./build
 runtime:
