testing ghpages theme

--- a/suma-site.yml
+++ b/suma-site.yml
@@ -99,10 +99,10 @@ content:
   sources:
 
   # Uncomment to build from your local git clone
-  - url: .
+  #- url: .
 
   # Uncomment to build from the remote github repository.
-  #- url: https://github.com/SUSE/doc-susemanager.git
+  - url: https://github.com/SUSE/doc-susemanager.git
 
     # To build locally ensure you have your current local branch listed.
     branches:
@@ -125,7 +125,7 @@ ui:
   # - suma-webui (product ui on OBS)
   # - suma-ghpages (for publishing to gh-pages)
   # - suma-susecom (suse.com/documentation publishing and docserv)
-  supplemental_files: ./branding/supplemental-ui/suma/susecom
+  supplemental_files: ./branding/supplemental-ui/suma/suma-github
 output:
   dir: ./build
 runtime:
