testing icon:font removal from attribs

--- a/suma-site.yml
+++ b/suma-site.yml
@@ -33,7 +33,7 @@ asciidoc:
     # Asciidoc Configuration Attributes
     linkattrs: true
     sectlinks: true
-    icons: font
+    #icons: font
     experimental: true
 
     # Enable or disable SUSE Manager conditional content (Default is true)
