removed duplicate index pages, updated ifevals, updated uyuni theme and uyuni Makefile commands

--- a/uyuni-site.yml
+++ b/uyuni-site.yml
@@ -1,7 +1,7 @@
 # Doc site [title, and start page]
 site:
   title: Uyuni Documentation
-  start_page: uyuni::index-uyuni
+  start_page: uyuni::index
   url: https://www.uyuni-project.org/uyuni-docs
 
 asciidoc:
@@ -102,7 +102,7 @@ content:
     # - uyuni-primary.zip (do not use, will release with uyuni landing page)
 ui:
   bundle:
-    url: ./branding/default-ui/uyuni/uyuni-primary.zip
+    url: ./branding/default-ui/suma/latest-bundle.zip
     snapshot: true
 
     # - uyuni-depreciated (use for now)
