--- a/suma-site.yml
+++ b/suma-site.yml
@@ -2,7 +2,7 @@
 # Doc site [title, and start page]
 site:
   title: SUSE Manager Documentation
-  start_page: suse-manager::index-suma
+  start_page: suse-manager::index
   # site.url should be adjusted before building depending on the desired target.
   # The site.url value is used to create the base url for the sitemap.xml file.
   #
@@ -33,7 +33,7 @@ asciidoc:
     # Asciidoc Configuration Attributes
     linkattrs: true
     sectlinks: true
-    #icons: font
+    icons: font
     experimental: true
 
     # Enable or disable SUSE Manager conditional content (Default is true)
@@ -99,10 +99,10 @@ content:
   sources:
 
   # Uncomment to build from your local git clone
-  #- url: .
+  - url: .
 
   # Uncomment to build from the remote github repository.
-  - url: https://github.com/SUSE/doc-susemanager.git
+  #- url: https://github.com/SUSE/doc-susemanager.git
 
     # To build locally ensure you have your current local branch listed.
     branches:
