updated supplmental file for new doc site

--- a/suma-site.yml
+++ b/suma-site.yml
@@ -7,12 +7,10 @@ site:
   # The site.url value is used to create the base url for the sitemap.xml file.
   #
   # The following selections are available
-  # - Github Pages: https://opensource.suse.com/doc-susemanager
-  # - ProductUI http://localhost/docs/
-  # - SUSE.com: https://www.suse.com/documentation/suse-manager-4/4.0/
-  # - (docteam) Docserv Development https://documentation.provo.novell.com/external-tree/en-us/suma/4.0/suse-manager
-  # - (docteam) Docserv Production https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager
-  url: https://opensource.suse.com/doc-susemanager/
+  # - Product UI leave site.url blank
+  # - Github Pages: https://opensource.suse.com/doc-susemanager/
+  # - Docserv Production https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager/
+  url: https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager/
 
 
 asciidoc:
@@ -125,7 +123,7 @@ ui:
   # - suma-webui (product ui on OBS)
   # - suma-ghpages (for publishing to gh-pages)
   # - suma-susecom (suse.com/documentation publishing and docserv)
-  supplemental_files: ./branding/supplemental-ui/suma/suma-ghpages
+  supplemental_files: ./branding/supplemental-ui/suma/susecom
 output:
   dir: ./build
 runtime:
