--- a/suma-site.yml
+++ b/suma-site.yml
@@ -10,7 +10,7 @@ site:
   # - Product UI leave site.url blank
   # - Github Pages: https://opensource.suse.com/doc-susemanager/
   # - Docserv Production https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager/
-  url: https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager/
+  url: https://documentation.suse.com/external-tree/en-us/suma/4.0/
 
 
 asciidoc:
