--- a/suma-site.yml
+++ b/suma-site.yml
@@ -9,7 +9,7 @@ site:
   # The following selections are available
   # - Product UI leave site.url blank
   # - Github Pages: https://opensource.suse.com/doc-susemanager/
-  # - Docserv Production https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager/
+  # - Docserv Production https://documentation.suse.com/external-tree/en-us/suma/4.0/
   url: https://documentation.suse.com/external-tree/en-us/suma/4.0/
 
 
