Rework ES/RHEL/CentOS doc

--- a/uyuni-site.yml
+++ b/uyuni-site.yml
@@ -39,7 +39,9 @@ asciidoc:
     ipf: Itanium
     x86: x86
     x86_64: x86_64
+    centos: 'CentOS'
     rhel: 'Red Hat Enterprise Linux'
+    rhela: 'RHEL'
     rhnminrelease6: 'Red Hat Enterprise Linux Server 6'
     rhnminrelease7: 'Red Hat Enterprise Linux Server 7'
     ubuntu: Ubuntu
@@ -57,6 +59,8 @@ asciidoc:
     scc: SUSE Customer Center
     sls: SUSE Linux Enterprise Server
     sle: SUSE Linux Enterprise
+    sleses: SUSE Linux Enterprise Server with Expanded Support
+    slesesa: Expanded Support
     slsa: SLES
     suse: SUSE
     slea: SLE
