--- a/uyuni-site.yml
+++ b/uyuni-site.yml
@@ -39,7 +39,7 @@ asciidoc:
     ipf: Itanium
     x86: x86
     x86_64: x86_64
-    centos: 'CentOS'
+    redhat: 'Red Hat'
     rhel: 'Red Hat Enterprise Linux'
     rhela: 'RHEL'
     rhnminrelease6: 'Red Hat Enterprise Linux Server 6'
@@ -73,7 +73,6 @@ asciidoc:
     rootuser: root
     ruser: root
     mdash: '-'
-    rhela: RHEL
     mgradvtop: Advanced Topics Guide
     mgrgetstart: Getting Started Guide
     mgrrefguide: Reference Guide
