--- a/suma-site.yml
+++ b/suma-site.yml
@@ -91,6 +91,8 @@ asciidoc:
     vmhost: VM Host Server
     xen: Xen
     kvm: KVM
+    k8s: Kubernetes
+    caasp: SUSE CaaS Platform
     homepage: https://github.com/SUSE/doc-susemanager
 
 content:
