--- a/uyuni-site.yml
+++ b/uyuni-site.yml
@@ -83,6 +83,8 @@ asciidoc:
     vmhost: VM Host Server
     xen: Xen
     kvm: KVM
+    k8s: Kubernetes
+    caasp: SUSE CaaS Platform
     homepage: https://github.com/SUSE/doc-susemanager
 
 content:
