--- a/suma-site.yml
+++ b/suma-site.yml
@@ -10,7 +10,7 @@ site:
   # - Product UI leave site.url blank
   # - Github Pages: https://opensource.suse.com/doc-susemanager/
   # - Docserv Production https://documentation.suse.com/external-tree/en-us/suma/4.0/
-  url: https://opensource.suse.com/doc-susemanager/
+  #  url: https://opensource.suse.com/doc-susemanager/
 
 
 asciidoc:
@@ -99,10 +99,10 @@ content:
   sources:
 
   # Uncomment to build from your local git clone
-  #- url: .
+  - url: .
 
   # Uncomment to build from the remote github repository.
-  - url: https://github.com/SUSE/doc-susemanager.git
+  # - url: https://github.com/SUSE/doc-susemanager.git
 
     # To build locally ensure you have your current local branch listed.
     branches:
