--- a/suma-site.yml
+++ b/suma-site.yml
@@ -65,7 +65,7 @@ asciidoc:
     webui: Web UI
     jeos: JeOS
     scc: SUSE Customer Center
-    sls: SUSE Linux Enterprise Server
+    sles: SUSE Linux Enterprise Server
     sle: SUSE Linux Enterprise
     sleses: SUSE Linux Enterprise Server with Expanded Support
     slesesa: Expanded Support
