--- a/suma-site.yml
+++ b/suma-site.yml
@@ -68,7 +68,7 @@ asciidoc:
     sls: SUSE Linux Enterprise Server
     sle: SUSE Linux Enterprise
     sleses: SUSE Linux Enterprise Server with Expanded Support
-    slesesa: Expanded Support
+    es: Expanded Support
     slsa: SLES
     suse: SUSE
     slea: SLE
