Reorganize feature matrix: - Move supported features under 'Supported clients and features' (from each client's subsection) - Split SLES from the generic 'Supported clients and features' main page, for consistency with the other clients - Split SLES ES from RHEL supported features page, as ES has its own client configuration page - Some clarifications in the CentOS features page to make it clear what happens when you have ES and what happens when you do not - Ubuntu: more recent version first (like the others) and change some "not supported" features to question marks, as they will be supported in the future - Hide RHEL/SLES ES 8, as it is not (yet) supported (it will be in 4.0.4)

--- a/uyuni-site.yml
+++ b/uyuni-site.yml
@@ -45,6 +45,7 @@ asciidoc:
     rhnminrelease6: 'Red Hat Enterprise Linux Server 6'
     rhnminrelease7: 'Red Hat Enterprise Linux Server 7'
     ubuntu: Ubuntu
+    debian: Debian
     opensuse: openSUSE
     centos: CentOS
     kickstart: Kickstart
