--- a/.github/workflows/feature-ci-tests.yml
+++ b/.github/workflows/feature-ci-tests.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: '[CHECKOUT] Head'
+    - name: '[CHECKOUT] Branch'
       uses: actions/checkout@v1
 
     - name: '[TOOLCHAIN] Set up Ruby 2.6'
