Update and rename feature-ci-tests.yml to features.yml

--- a/.github/workflows/features.yml
+++ b/.github/workflows/features.yml
@@ -1,5 +1,5 @@
 
-name: feature-ci-tests
+name: feature-tests
 
 on:
   push:
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: '[CHECKOUT] Branch'
+    - name: '[CHECKOUT] Checkout branch that triggered this workflow'
       uses: actions/checkout@v1
 
     - name: '[TOOLCHAIN] Set up Ruby 2.6'
