--- a/suma-site.yml
+++ b/suma-site.yml
@@ -110,7 +110,7 @@ content:
 
     # To build locally ensure you have your current local branch listed.
     branches:
-      - '.'
+      - master
       - manager-4.0
 
 ui:
