--- a/antora.yml
+++ b/antora.yml
@@ -7,7 +7,7 @@ title: SUSE Manager
 #title: Uyuni
 
 # Which branch is the default for this playbook.
-version: master
+version: develop
 
 # Starting page or home
 start_page: ROOT:index
