change admon colours

--- a/branding/pdf/themes/suse-theme.yml
+++ b/branding/pdf/themes/suse-theme.yml
@@ -75,7 +75,7 @@ brand:
   # Colors from: https://www.eosdesignsystem.com/colors
   elements:
     link: #00B2E2
-    warning: #FFC107
+    warning: #FA000
     error: #DC3545
     text: #969494
     decoration: #F75C03
