--- a/branding/pdf/themes/suse-theme.yml
+++ b/branding/pdf/themes/suse-theme.yml
@@ -244,11 +244,11 @@ admonition:
       name: fa-info-circle
       size: $base_font_size_ultralarge
     important:
-      name: fa-exclamation-circle
-      stroke_color: $brand_secondary_orange
+      name: fa-exclamation-triangle
+      stroke_color: $brand_secondary_lightorange
       size: $base_font_size_ultralarge
     warning:
-      name: fa-exclamation-triangle
+      name: fa-exclamation-circle
       stroke_color: $brand_elements_warning
       size: $base_font_size_ultralarge
     caution:
