--- a/suma-site.yml
+++ b/suma-site.yml
@@ -10,7 +10,7 @@ site:
   # - Product UI leave site.url blank
   # - Github Pages: https://opensource.suse.com/doc-susemanager/
   # - Docserv Production https://documentation.suse.com/external-tree/en-us/suma/4.0/
-  url: https://opensource.suse.com/doc-susemanager/
+  url: https://documentation.suse.com/external-tree/en-us/suma/4.0/
 
 
 asciidoc:
@@ -111,7 +111,7 @@ content:
     # To build locally ensure you have your current local branch listed.
     branches:
       - '.'
-      - manager-4.0
+      #- manager-4.0
 
 ui:
   bundle:
@@ -130,7 +130,7 @@ ui:
   # - suma-webui (product ui on OBS)
   # - suma-ghpages (for publishing to gh-pages)
   # - suma-susecom (suse.com/documentation publishing and docserv)
-  supplemental_files: ./branding/supplemental-ui/suma/suma-ghpages
+  supplemental_files: ./branding/supplemental-ui/suma/suma-susecom
 output:
   dir: ./build
 runtime:
