--- a/suma-site.yml
+++ b/suma-site.yml
@@ -10,7 +10,7 @@ site:
   # - Product UI leave site.url blank
   # - Github Pages: https://opensource.suse.com/doc-susemanager/
   # - Docserv Production https://documentation.suse.com/external-tree/en-us/suma/4.0/
-  url: https://documentation.suse.com/external-tree/en-us/suma/4.0/
+  url: https://opensource.suse.com/doc-susemanager/
 
 
 asciidoc:
@@ -103,15 +103,15 @@ content:
   sources:
 
   # Uncomment to build from your local git clone
-  #- url: .
+  - url: .
 
   # Uncomment to build from the remote github repository.
-  - url: https://github.com/SUSE/doc-susemanager.git
+  #- url: https://github.com/SUSE/doc-susemanager.git
 
     # To build locally ensure you have your current local branch listed.
     branches:
-      - master
-      #- manager-4.0
+      - '.'
+      - manager-4.0
 
 ui:
   bundle:
@@ -130,7 +130,7 @@ ui:
   # - suma-webui (product ui on OBS)
   # - suma-ghpages (for publishing to gh-pages)
   # - suma-susecom (suse.com/documentation publishing and docserv)
-  supplemental_files: ./branding/supplemental-ui/suma/susecom
+  supplemental_files: ./branding/supplemental-ui/suma/suma-ghpages
 output:
   dir: ./build
 runtime:
